--add-exports=java.desktop/sun.swing=ALL-UNNAMED isn't necessary after fixing jide-oss in my fork